--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,8 @@
   <build_depend>std_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
+  <build_depend>actionlib</build_depend>
+  <run_depend>actionlib</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
