--- a/package.xml
+++ b/package.xml
@@ -46,6 +46,12 @@
   <run_depend>std_msgs</run_depend>
   <build_depend>actionlib</build_depend>
   <run_depend>actionlib</run_depend>
+
+  <build_depend>ros_control</build_depend>
+  <run_depend>ros_control</run_depend>
+  <build_depend>ros_controllers</build_depend>
+  <run_depend>ros_controllers</run_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
