--- a/package.xml
+++ b/package.xml
@@ -47,10 +47,10 @@
   <build_depend>actionlib</build_depend>
   <run_depend>actionlib</run_depend>
 
-  <build_depend>ros_control</build_depend>
+<!--   <build_depend>ros_control</build_depend>
   <run_depend>ros_control</run_depend>
   <build_depend>ros_controllers</build_depend>
-  <run_depend>ros_controllers</run_depend>
+  <run_depend>ros_controllers</run_depend> -->
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
